--- a/myfiles/c3/style.css
+++ b/myfiles/c3/style.css
@@ -5,22 +5,24 @@ html{
 }
 
 body{
-  background-color:#fffeee;
+  background-color:#fee;
 }
 
 h1 {
-  color: #0bd;
+  color: #faa;
   font-size: 2rem;
-  font-family: serif;
+  font-family: 'Itim',cursive;
 }
 
 h2 {
   font-size: 20px;
+  color: navy;
   font-family: "Yu Gthic",YuGothic,sans-serif;
 }
 
 p {
   font-size:20px;
+  color: rgba{10,130,165,.5};
   font-family: "Hiragino Maru Gothic Pro",sans-serif;
   font-weight: bold;
   line-height: 1.7;
