--- a/myfiles/c3/style.css
+++ b/myfiles/c3/style.css
@@ -95,14 +95,46 @@ div#container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  height: 20vh;
+  justify-content: space-around;
   /* flex-direction: row-reverse; */
 }
 
 .item{
   background: #0bd;
   color: #fff;
-  margin: 10px;
+  margin: auto;
   padding: 10px;
   width: 30px;
   height: 30px;
+}
+
+div#container2{
+
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  height: 20vh;
+  margin: 10px;
+}
+
+.item2{
+  background: #0bd;
+  color: #fff;
+  margin: 20px;
+  padding: 20px;
+}
+
+div#container3{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  grid-template-rows: 150px 50px 100px; /* 適応する行ごとに設定できる*/
+}
+
+.item3{
+  background: #0bd;
+  color: #fff;
+  padding: 10px;
 }
